# hpxml-schema-api

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  dev_setup.sh  devcontainer.json
.devcontainer/scripts/: aws.sh  certificates.sh  claude.sh  common.sh  nodejs.sh  vscode_mcp.sh
.serena/: project.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  BETTER_EXTENSION_SOLUTION.md
examples/: api_client.py
scripts/: export_schemas.py
src/hpxml_schema_api/: __init__.py  app.py  cache.py  enhanced_validation.py  graphql_bridge.py  graphql_schema.py  mcp_fastapi_integration.py  mcp_server.py  merger.py  models.py  monitoring.py  run_server.py  schema_cli.py  schema_downloader.py  schematron_parser.py  serialization.py  version_manager.py  versioned_routes.py  xsd_parser.py
tests/: test_app.py  test_cache.py  test_etag_caching.py  test_health_endpoint.py  test_mcp_integration.py  test_mcp_primitives.py  test_mcp_server_phase1.py  test_mcp_standard_resources.py  test_mcp_versions_resource.py  test_merger.py  test_schema_exports.py  test_schematron_parser.py  test_tree_depth_and_not_found.py  test_version_matrix.py  test_versions_endpoint.py  test_xsd_parser.py  test_xsd_parser_extensions.py
tests/fixtures/expected_outputs/: README.md
tests/fixtures/expected_outputs/golden_files/baseline/: baseline_ERS-EX-10000.json  baseline_ERS-EX-10001.json  baseline_ERS-EX-10001.xml  baseline_WizardHouse.json  baseline_WizardHouse.xml  baseline_WizardHouse_0.13.json  baseline_WizardHouse_0.13.xml  baseline_WizardHouse_0.195.json  baseline_WizardHouse_0.195.xml  baseline_WizardHouse_0.26.json  baseline_WizardHouse_0.26.xml  baseline_WizardHouse_0.325.json  baseline_WizardHouse_0.325.xml  baseline_energy_summary.json  baseline_hpxml_summary.json
tests/fixtures/schema/: sample_hpxml.xsd  sample_rules.json  sample_schematron.xml
tests/schema_api/: test_distributed_cache.py  test_enhanced_validation.py  test_graphql.py  test_version_manager.py  test_versioned_routes.py
